Fixing time selector overflow

--- a/admin/assets/less/admin-controls.less
+++ b/admin/assets/less/admin-controls.less
@@ -940,6 +940,11 @@ body.sidebar-tab{
 	    transition: all .1s
 	}
 
+	.nice-select.time .option{
+	    overflow: visible;
+	    text-overflow: inherit;
+	}
+
 	.nice-select .option.focus,
 	.nice-select .option.selected.focus,
 	.nice-select .option:hover {
